--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:e-test.helloWorld"
+		"onCommand:e-test.helloWorld",
+		"onCommand:e-test.commond.updateTreeNode"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -18,6 +19,10 @@
 			{
 				"command": "e-test.helloWorld",
 				"title": "Hello World"
+			},
+			{
+				"command": "e-test.commond.updateTreeNode",
+				"title": "update tree node"
 			}
 		],
 		"viewsContainers": {
